--- a/Конспекты/Data Science/Анализ данных/Pandas.ipynb
+++ b/Конспекты/Data Science/Анализ данных/Pandas.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "d105e2d9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Документация Pandas"
    ]
@@ -12,7 +16,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "d0113dd4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -21,7 +29,11 @@
   {
    "cell_type": "markdown",
    "id": "51aa9c08",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "###  Создание DateFrame"
    ]
@@ -30,7 +42,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "4ba02ebf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -120,7 +136,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "13bf22da",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -205,7 +225,11 @@
   {
    "cell_type": "markdown",
    "id": "24be9370",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Обращение по индексу"
    ]
@@ -214,7 +238,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "2caa9b4a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -235,7 +263,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "96f88ea0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -258,7 +290,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "2e430566",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -322,7 +358,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "5daae314",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -385,7 +425,11 @@
   {
    "cell_type": "markdown",
    "id": "976a609e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Текстовые срезы"
    ]
@@ -394,7 +438,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "68f9a15d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -487,7 +535,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "8fbac04d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -508,7 +560,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "093825f5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -533,7 +589,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "4fed7b13",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -605,7 +665,11 @@
   {
    "cell_type": "markdown",
    "id": "887d6a31",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Определить размерность"
    ]
@@ -614,7 +678,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "8c88c5b1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -635,7 +703,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "1993a096",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -656,7 +728,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "f795aac7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -676,7 +752,11 @@
   {
    "cell_type": "markdown",
    "id": "c2ef0ece",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Количественные характеристики"
    ]
@@ -685,7 +765,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "4bb70194",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -712,7 +796,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "deae0d58",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -808,7 +896,11 @@
   {
    "cell_type": "markdown",
    "id": "811a60fd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Вывод первых строк"
    ]
@@ -817,7 +909,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "dce689eb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -887,7 +983,11 @@
   {
    "cell_type": "markdown",
    "id": "954229c4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Вывод последних строк"
    ]
@@ -896,7 +996,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "7541779b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -966,7 +1070,11 @@
   {
    "cell_type": "markdown",
    "id": "9fd088f4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Фильтрация значений NaN"
    ]
@@ -975,7 +1083,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "b3577521",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1060,7 +1172,11 @@
   {
    "cell_type": "markdown",
    "id": "c8f2ba90",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Условия"
    ]
@@ -1069,7 +1185,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "911ca8dd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1133,7 +1253,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "3899788c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1196,7 +1320,11 @@
   {
    "cell_type": "markdown",
    "id": "f240df74",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Удаление столбцов"
    ]
@@ -1205,7 +1333,11 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "3f8c0f1a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1283,7 +1415,11 @@
   {
    "cell_type": "markdown",
    "id": "e58693d7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Уникальные значения"
    ]
@@ -1292,7 +1428,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "b917399f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1316,7 +1456,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "552351fc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   },
@@ -1324,7 +1468,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1c5799b8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
