--- a/Конспекты/Data Science/Статистика/Статистика.ipynb
+++ b/Конспекты/Data Science/Статистика/Статистика.ipynb
@@ -25,10 +25,16 @@
     "## Простая дисперсия\n",
     "\n",
     "Простая дисперсия (для несгруппированных данных) вычисляется по формуле:\n",
-    "\n",
+    "Совокупность включает в себя все значения рассматриваемой величины. Например, если вы изучаете возраст жителей Ленинградской области, то совокупность включает возраст всех жителей этой области.\n",
     "\n",
     "$\n",
     "\\delta^2 = D = \\frac{\\sum (x - \\mu)^2}{n}\n",
+    "$\n",
+    "\n",
+    "Дисперсия является мерой разброса значений некоторой величины. Чем ближе значение дисперсии к нулю, тем ближе значения сгруппированы друг к другу. Работая с выборкой значений, используйте следующую формулу для вычисления дисперсии:\n",
+    "\n",
+    "$\n",
+    "s^2 = D = \\frac{\\sum (x - \\mu)^2}{n-1}\n",
     "$"
    ],
    "metadata": {
